# comfyui-ea-nodes

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: EA_Flux_Dev_T2I.json  EA_PostProcess.json  EA_PreTrain.json  EA_PreTrain_README.md  EA_Wan22_Lightning_I2V.json  EA_Wan22_Lightning_I2V_V2.json
examples/wan/: EA_Wan22_Lightning_I2V.json  ea_wan_power_lora_blank.json
nodes/: __init__.py  ea_auto_trim.py  ea_image_compare.py  ea_lightning_motion_bias.py  ea_pingpong.py  ea_power_lora.py  ea_power_lora_wanvideo.py  ea_simple_filename.py  ea_trim_frames.py  ea_trim_images_start_end.py  ea_trim_window.py  ea_video_io.py  ea_video_save_idempotent.py
tests/: validate_ea_nodes.py
web/: ea_lightning_motion_bias.js  ea_power_loader.js  ea_power_lora.js  ea_video_ui.js
workflows/: ci.yml
